--- a/src/components/Title/title.scss
+++ b/src/components/Title/title.scss
@@ -6,7 +6,7 @@
     align-items: center;
 
     .page-title-tooltip {
-      margin-left: 100%;
+      margin-left: 10px;
     }
 
     .page-title-icon {
